// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LongOperationIndicator (snapshot) > renders at ~5s elapsed (not slow) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--think-accent, currentColor);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 16px; height: 16px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <svg
          aria-hidden="true"
          class="claude-asterisk thinking-core claude-asterisk--active"
          data-brand="thinking-core"
          data-brand-geometry="sira"
          data-claude-asterisk="active"
          data-claude-asterisk-weight="fine"
          data-thinking-core="active"
          data-thinking-tone="default"
          height="16"
          style="display: inline-block; flex-shrink: 0; color: var(--think-accent, currentColor);"
          viewBox="0 0 400 400"
          width="16"
        >
          <g
            class="thinking-core__arms"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="24"
          >
            <line
              class="thinking-core__arm"
              x1="200"
              x2="200"
              y1="200"
              y2="40"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="313.14"
              y1="200"
              y2="86.86"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="360"
              y1="200"
              y2="200"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="313.14"
              y1="200"
              y2="313.14"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="200"
              y1="200"
              y2="360"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="86.86"
              y1="200"
              y2="313.14"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="40"
              y1="200"
              y2="200"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="86.86"
              y1="200"
              y2="86.86"
            />
          </g>
          <g
            class="thinking-core__dots"
            fill="currentColor"
          >
            <circle
              class="thinking-core__tip"
              cx="200"
              cy="40"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="313.14"
              cy="86.86"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="360"
              cy="200"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="313.14"
              cy="313.14"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="200"
              cy="360"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="86.86"
              cy="313.14"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="40"
              cy="200"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="86.86"
              cy="86.86"
              r="40"
            />
            <circle
              class="thinking-core__core"
              cx="200"
              cy="200"
              r="52"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-muted-foreground"
    >
      5
      s
    </span>
  </div>
</div>
`;

exports[`LongOperationIndicator (snapshot) > renders at ~35s elapsed (slow state) 1`] = `
<div
  aria-live="polite"
  class="fixed bottom-24 right-4 z-50 flex max-w-[90vw] items-center gap-3 rounded-lg border border-border bg-background/95 px-3 py-2 text-xs shadow-lg backdrop-blur sm:bottom-6 sm:max-w-sm"
  role="status"
>
  <div
    aria-label="Pensando…"
    class="thinking-status-loader inline-flex min-w-0 items-center gap-0"
    data-loader-chip="/loaders/pensando.svg"
    data-loader-src="/loaders/pensando.svg"
    data-pensando-bars="1"
    data-thinking-loader="pensando"
    style="color: var(--think-accent, currentColor);"
  >
    <span
      aria-hidden="true"
      class="flex shrink-0 items-center justify-center"
      style="width: 16px; height: 16px;"
    >
      <span
        aria-hidden="true"
        class="pointer-events-none select-none"
        data-loader-src="/loaders/pensando.svg"
        data-pensando-bars="1"
        style="display: inline-flex; line-height: 0;"
      >
        <svg
          aria-hidden="true"
          class="claude-asterisk thinking-core claude-asterisk--active"
          data-brand="thinking-core"
          data-brand-geometry="sira"
          data-claude-asterisk="active"
          data-claude-asterisk-weight="fine"
          data-thinking-core="active"
          data-thinking-tone="default"
          height="16"
          style="display: inline-block; flex-shrink: 0; color: var(--think-accent, currentColor);"
          viewBox="0 0 400 400"
          width="16"
        >
          <g
            class="thinking-core__arms"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-width="24"
          >
            <line
              class="thinking-core__arm"
              x1="200"
              x2="200"
              y1="200"
              y2="40"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="313.14"
              y1="200"
              y2="86.86"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="360"
              y1="200"
              y2="200"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="313.14"
              y1="200"
              y2="313.14"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="200"
              y1="200"
              y2="360"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="86.86"
              y1="200"
              y2="313.14"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="40"
              y1="200"
              y2="200"
            />
            <line
              class="thinking-core__arm"
              x1="200"
              x2="86.86"
              y1="200"
              y2="86.86"
            />
          </g>
          <g
            class="thinking-core__dots"
            fill="currentColor"
          >
            <circle
              class="thinking-core__tip"
              cx="200"
              cy="40"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="313.14"
              cy="86.86"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="360"
              cy="200"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="313.14"
              cy="313.14"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="200"
              cy="360"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="86.86"
              cy="313.14"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="40"
              cy="200"
              r="40"
            />
            <circle
              class="thinking-core__tip"
              cx="86.86"
              cy="86.86"
              r="40"
            />
            <circle
              class="thinking-core__core"
              cx="200"
              cy="200"
              r="52"
            />
          </g>
        </svg>
      </span>
    </span>
  </div>
  <div
    class="flex min-w-0 flex-1 flex-col gap-0.5"
  >
    <span
      class="truncate font-medium text-foreground"
    >
      Generando…
    </span>
    <span
      class="text-amber-600"
    >
      35
      s
       · está tardando más de lo habitual
    </span>
  </div>
</div>
`;
